# Python-Web-Development-with-Sanic

./: README.md
Chapter01/: server.py
Chapter02/booktracker/: .pdm.toml  pyproject.toml
Chapter02/booktracker/alt1/: run.py
Chapter02/booktracker/alt1/myapp/: bootstrap.py  listener.py  server.py
Chapter02/booktracker/src/: server.py
Chapter02/booktracker/src/blueprints/v1/author/: view.py
Chapter02/booktracker/src/blueprints/v1/book/: view.py
Chapter02/booktracker/src/blueprints/v2/: group.py
Chapter02/booktracker/src/blueprints/v2/book/: view.py
Chapter02/booktracker/src/utilities/: app_factory.py  autodiscovery.py
Chapter04/requeststream/: client.py  server.py  somefile.txt  upload.py
Chapter04/validation_dataclasses/: server.py
Chapter04/validation_pydantic/: server.py
Chapter05/sse/: index.html
Chapter05/websockets/: index.html  server.py
Chapter06/inprocess-queue/: db  server.py
Chapter06/request-middleware/: server.py
Chapter06/response-middleware/: server.py
Chapter07/accesstoken/: index-refresh-on-exception.html  index-refresh-periodically.html  server.py
Chapter07/apitoken/: server.py
Chapter07/corsresponse/: server.py  server2.py
Chapter07/csrf/: server.py
Chapter08/k8s/: Dockerfile  load-balancer.yml
Chapter08/paas/: Procfile
Chapter09/hikingapp/: docker-compose.yml
Chapter09/testing0/: conftest.py
Chapter09/testing1/: conftest.py  test_sample.py
Chapter09/testing4/: server.py
Chapter10/graphql/: docker-compose.yml
Chapter10/pwa/: server.py
Chapter10/wsfeed/: README.md
chapters/05/html/: server.py
(+278 files in other folders)
