[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Adam Hopkins", email = "adam@amhopkins.com"},
]
dependencies = [
    "sanic~=21.3",
]
requires-python = ">=3.9"
dynamic = ["classifiers"]
license = {text = "NOLICENSE"}

[project.urls]
homepage = ""

[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"

[tool]
[tool.pdm]
